test(gates): PASS the architecture-level preview gate on a real Fabric server
Gate #5 was "can Fabric Loader load and run a JDK21 --enable-preview class".
It passes, so the project carrier assumption (Fabric mod + preview FFM) holds.

Method (deliberately no Gradle/Loom, to isolate the variable): compile a
ModInitializer with javac --release 21 --enable-preview against the local Gradle
module cache, pack it as a plain mod jar, drop it into a real Fabric 0.19.5 /
MC 1.20.4 server and boot with
  --enable-preview --enable-native-access=ALL-UNNAMED

Observed (real stdout):
  [CAVA-GATE] mod class file major.minor = 65.65535   (preview)
  [CAVA-GATE] runtime               = 21.0.10+8-LTS-217
  [CAVA-GATE] fabricloader          = 0.19.5
  [CAVA-GATE] native strlen("cava")  = 4   (expect 4)
  [CAVA-GATE] VERDICT               = PREVIEW_OK
  [Server thread/INFO]: Done (14.193s)!

Derived hard constraints now recorded in the contract:
- --enable-native-access=ALL-UNNAMED is mandatory; without it native downcalls
  are refused at runtime.
- Loader 0.19.5 is the known-good loader for preview classes; any loader bump
  must re-run this gate.
Still unverified (left to integration gate 2): Mixin + Loom remap over a class
pool that contains preview classes.

Also records gate #1: fabric-loom 1.18.x demands JVM 25 and is therefore
incompatible with the project's --release 21 --enable-preview constraint;
1.17.x demands JVM 21, so loom_version is pinned to 1.17.20.

Repro scripts: tools/build-preview-gate.ps1, tools/setup-preview-gate-server.ps1